--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <meta charset="UTF-8">
+    <title>Tom Cronin</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    
+    <link rel="stylesheet" href="index.css">
+    <script src=""></script>
+    <head>
+        <script src="https://kit.fontawesome.com/17f4ecc564.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <div class="wrapper">
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="#">Test</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+
+            <!-- Top Container -->
+
+            <section class="about-me top-container">
+                <header class="showcase">
+                    <h1>Your Web Presence</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt, officia mollitia omnis cupiditate officiis.  </p>
+                    <a href="#" class="btn">Read More</a>
+                </header>
+                <div class="top-box top-box-a">
+                    <h4>Membership</h4>
+                    <p class="price">$199/Month</p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+                <div class="top-box top-box-b">
+                    <h4>Pro  Membership</h4>
+                    <p class="price">$299/Month</p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+                <!-- <p>Hello, my name is
+                    <h1>Tom Cronin</h1>
+                </p>
+                <p>Im a software engineer based in the south of Ireland.</br>I primrarily work in on backend development.</p> -->
+            </section>
+            <!-- Box section -->
+            <section class="boxes">
+                <div class="box">
+                    <i class="fa-solid fa-pie-chart fa-4x"></i>
+                    <h3>analytics</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, minus.</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-globe fa-4x"></i>
+                    <h3>Marketing</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, minus.</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-cog fa-4x"></i>
+                    <h3>Development</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, minus.</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-users fa-4x"></i>
+                    <h3>Support</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, minus.</p>
+                </div>
+            </section>
+            <!-- Info Section -->
+            <section class="info">
+                <img src="images/macbook.jpg" alt="Image of a Macbook pro"></img>
+                <div>
+                    <h2>Your Buisness on the web </h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur dolores minus magni ipsam. Repudiandae maiores obcaecati accusantium nisi porro natus fugit praesentium sunt eum corrupti voluptas, quae id omnis temporibus!</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+            </section>
+            <!-- Footer -->
+            <footer>
+                <p>Tom Cronin &copy;2022</p>
+            </footer>
+        </div>
+        
+    </body>
+</html>
