Will be chanign around

--- a/index.html
+++ b/index.html
@@ -1,85 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-    <meta charset="UTF-8">
-    <title>Tom Cronin</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    
-    <link rel="stylesheet" href="index.css">
-    <script src=""></script>
+    <html lang="en">
     <head>
-        <script src="https://kit.fontawesome.com/17f4ecc564.js" crossorigin="anonymous"></script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+        <link rel="stylesheet" href="index.css">
+        <title>Your Name - Portfolio</title>
     </head>
     <body>
-        <div class="wrapper">
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="#">Test</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+        <header class="header">
+            <h1>Tom Cronin</h1>
+            <p>Software Engineer | Web Developer | Project Enthusiast</p>
+        </header>
 
-            <!-- Top Container -->
+        <main class="main">
+            <section class="section">
+                <h2>About Me</h2>
+                <p>Write a brief introduction about yourself, your interests, and your skills.</p>
+            </section>
 
-            <section class="about-me top-container">
-                <header class="showcase">
-                    <h1>Your Web Presence</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt, officia mollitia omnis cupiditate officiis.  </p>
-                    <a href="#" class="btn">Read More</a>
-                </header>
-                <div class="top-box top-box-a">
-                    <h4>Membership</h4>
-                    <p class="price">$199/Month</p>
-                    <a href="#" class="btn">Buy Now</a>
-                </div>
-                <div class="top-box top-box-b">
-                    <h4>Pro  Membership</h4>
-                    <p class="price">$299/Month</p>
-                    <a href="#" class="btn">Buy Now</a>
-                </div>
-                <!-- <p>Hello, my name is
-                    <h1>Tom Cronin</h1>
-                </p>
-                <p>Im a software engineer based in the south of Ireland.</br>I primrarily work in on backend development.</p> -->
+            <section class="section">
+                <h2>Projects</h2>
+                <article class="project-item" style="display: flex; align-items: center;">
+                    <i class="fas fa-folder" style="font-size: 24px; margin-right: 10px;"></i>
+                    <a href="ai-projects.html" style="text-decoration: none; color: #333;">AI Projects</a>
+                </article>
+                <article class="project-item" style="display: flex; align-items: center;">
+                    <i class="fas fa-folder" style="font-size: 24px; margin-right: 10px;"></i>
+                    <a href="web-projects.html" style="text-decoration: none; color: #333;">Web Projects</a>
+                </article>
+                <!-- Repeat the above block for more project categories -->
             </section>
-            <!-- Box section -->
-            <section class="boxes">
-                <div class="box">
-                    <i class="fa-solid fa-pie-chart fa-4x"></i>
-                    <h3>analytics</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, minus.</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-globe fa-4x"></i>
-                    <h3>Marketing</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, minus.</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-cog fa-4x"></i>
-                    <h3>Development</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, minus.</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-users fa-4x"></i>
-                    <h3>Support</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, minus.</p>
-                </div>
-            </section>
-            <!-- Info Section -->
-            <section class="info">
-                <img src="images/macbook.jpg" alt="Image of a Macbook pro"></img>
-                <div>
-                    <h2>Your Buisness on the web </h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur dolores minus magni ipsam. Repudiandae maiores obcaecati accusantium nisi porro natus fugit praesentium sunt eum corrupti voluptas, quae id omnis temporibus!</p>
-                    <a href="#" class="btn">Learn More</a>
-                </div>
-            </section>
-            <!-- Footer -->
-            <footer>
-                <p>Tom Cronin &copy;2022</p>
-            </footer>
-        </div>
-        
+        </main>
+
+        <footer class="footer">
+            <p>&copy; 2024 Your Name. All rights reserved.</p>
+        </footer>
     </body>
 </html>
+
+
